Add elements to the App Component

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="TaskNage - Your Personal TaskList Web App"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>TaskNage - Your Personal TaskList Web App</title>
   </head>
   <body>
